--- a/CSS Zen Garden/style.css
+++ b/CSS Zen Garden/style.css
@@ -7,33 +7,85 @@
 .background { color: #A67449; }*/
 
 html {
-    background:#A67449 ;
-    color:#140000 ;
+    background: #A67449;
+    color: #140000;
     font-family: 'Arial Narrow Bold', sans-serif;
     font-size: 1.3rem;
+
 }
 
-p {    
+header {
+    background:#734C29 ;
+    color: #F2CEA2;
+}
+header > h1 {
+    display:inline-block;
+        margin-left:1em;
+        margin-right:1em;
+}
+
+header > h2 {
+    display:inline-block;
+}
+
+.intro {
+    height: 550px;
+}
+ul {
+    list-style-type: none;
+}
+
+li{
+    margin:1em;
+    text-align: center;
+}
+
+p {
     text-indent: 1em;
 }
+
 h1 {
-    font-size: 1.8rem ;
-    text-align:center; 
+    font-size: 1.8rem;
+    text-align: center;
 }
+
 h2 {
     font-size: 1.4rem;
-    text-align:center; 
+    text-align: center;
 }
+
 h3 {
     font-size: 1.2rem;
-    text-align:center; 
+    text-align: center;
 }
-.summary{
-    text-align:center;
+
+.summary {
+    text-align: center;
 }
+
 .mainsupporting {
     line-height: 1.5;
 }
+
 abbr {
-    font-variant:small-caps;
+    font-variant: small-caps;
+}
+
+#design-archives {
+    display:none ;
+}
+
+.page-wrapper {
+    width: 80%;
+    max-width: 1280px;
+    margin: auto;
+}
+
+footer {
+    margin: 4%;
+}
+
+footer a {
+    border: solid 2px #000000 ;
+    padding: 0.5em;
 }
