--- a/CSS Zen Garden/style.css
+++ b/CSS Zen Garden/style.css
@@ -101,9 +101,52 @@ abbr {
 
 footer {
     margin: 4%;
+    display: flex ;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 footer a {
     border: solid 2px #000000;
     padding: 0.5em;
+    flex-grow: 0;
+}
+
+.benefits {
+    display: flex;
+    text-wrap: wrap;
+    border-bottom:solid 1px;
+
+}
+
+.benefits > p {
+    align-self: start;
+    flex-basis: 70%;
+
+
+}
+
+.benefits > h3 {
+    align-self: center;
+    order:2;
+    flex-basis: 30%;
+
+}
+
+.participation {
+    display: flex;
+    border-bottom: solid 1px;
+    border-top: solid 1px;
+    flex-wrap: wrap;
+}
+
+.participation > h3 {
+    align-self: center;
+    flex-basis: 50%;
+}
+
+.participation > p {
+    flex-basis: 50%;
 }
