--- a/Desafio Web/Desafio style.css
+++ b/Desafio Web/Desafio style.css
@@ -85,6 +85,7 @@ header {
     margin-bottom: 200px;
     margin-top: 400px;
     padding-left: 20px;
+
 }
 
 .plado {
@@ -121,9 +122,53 @@ header {
     display: block;
     position: relative;
     top: 1300px;
-    text-align: end;
+    text-align: start;
     padding-right: 10px;
+    font-weight:bold;
+    color:rgba(240, 248, 255, 0.682);
+    padding:45px 0 20px;
+    font-size:15px;
+    line-height:24px;
+    color:#737373;
+
+
 }
+
+.footer-links
+{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li
+{
+  display:block
+}
+.footer-links a
+{
+  color:#737373
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover
+{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li
+
+.text-center {
+    font-weight: bold;
+    width: 100%;
+}
+
+
+.footer h6
+{
+  color:#fff;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+
 
 a {
     text-decoration: none;
@@ -142,3 +187,21 @@ button {
     top: 1300px;
 
 }
+
+.carousel {
+    top: 430px;
+    width:500px;
+    border-radius: 3.75rem; 
+    overflow: hidden;
+    margin: 0 auto;
+  }
+
+.carousel-control-next-icon {
+
+}
+      
+.carousel-control-prev {
+
+}
+
+
