--- a/Desafio Web/Desafio style.css
+++ b/Desafio Web/Desafio style.css
@@ -130,8 +130,6 @@ header {
     font-size:15px;
     line-height:24px;
     color:#737373;
-
-
 }
 
 .footer-links
@@ -191,17 +189,521 @@ button {
 .carousel {
     top: 430px;
     width:500px;
-    border-radius: 3.75rem; 
+    border-radius: 3.75rem;
     overflow: hidden;
-    margin: 0 auto;
-  }
-
-.carousel-control-next-icon {
-
-}
-      
-.carousel-control-prev {
-
+    margin-left: 65% ;
 }
 
 
+/*Os "@media" daqui e diante tem a função de adaptar a página web para diferentes dispositivos de acordo com as dimensões da tela*/
+
+/*mobile*/
+@media screen and (max-width:480px) {
+    .mybackground {
+        background-image: url(https://th.bing.com/th/id/R.87d855da98d60076c445ee473796e2d1?rik=e3HRqyWaht3smQ&riu=http%3a%2f%2f2.bp.blogspot.com%2f-KF0NLWuIB9E%2fVovnXJLnmtI%2fAAAAAAAACgI%2fbEq7iTGw2Mg%2fs1600%2fCAPA.png&ehk=n4D%2bK5vC5x%2bZsTm3tTZvEjmZgRWMrdgENmNnDvkEqEA%3d&risl=&pid=ImgRaw&r=0);
+        background-size:100%;
+
+    }
+
+    .section2 {
+        display: block;
+        align-items: center;
+        flex-wrap: wrap;
+        padding-top: 200px;
+        margin-bottom: 50px;
+        width: 100%;
+        position: initial;
+    }
+
+    .section2 p {
+        margin-top: 100px;
+        width: 100%;
+        padding-left: 20px;
+        border-right: none;
+        padding-right: 20px;
+    }
+    
+    .section2 h2 {
+        padding-left: 0px;
+        font-size: 40px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    }
+
+    .img1 {
+        visibility: hidden;
+    }
+
+    .titulo{
+        margin-top: 200px;
+    }
+
+    .section2 img {
+        display: none;
+    }
+
+    .sobre {
+        position: initial;
+        display: block;
+        flex-wrap: wrap;
+        width: 95%;
+        margin-bottom: 200px;
+        margin-top: 200px;
+        padding-left: 20px;
+        padding: none;
+    
+    }
+
+    .plado {
+        position: initial;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 200px;
+        margin-top: 0px;
+        padding-left: 0px;
+        padding-right: 0%;
+        border-left: none;
+    }
+
+    .section3 {
+        position: initial;
+        width: 100%;
+        padding-left: 20px;
+    
+    }
+
+    .section4 {
+        position: initial;
+        left: auto;
+        width: 100%;
+        border-left: solid #000 3px;
+        padding-right: 20px;
+        padding-left: 10px;
+        padding-top: 200px ;
+
+    }
+
+
+    .carousel {
+        position:absolute;
+        top:9000px;
+        margin-left: 0% ;
+        width: 400px;
+    }
+
+    .lastsec {
+
+        top: 900px;
+    
+    }
+
+    .footer {
+        top: 900px;
+
+    }
+
+    .footer p {
+        justify-content: center;
+        padding-left: 20px;
+    }
+
+    button {
+        margin-left: 32%;
+    }
+    
+}
+
+
+/*dispositivos extra pequenos*/
+@media screen and (min-width:481px) and (max-width:767px) {
+
+    .mybackground {
+        background-image: url(https://th.bing.com/th/id/R.87d855da98d60076c445ee473796e2d1?rik=e3HRqyWaht3smQ&riu=http%3a%2f%2f2.bp.blogspot.com%2f-KF0NLWuIB9E%2fVovnXJLnmtI%2fAAAAAAAACgI%2fbEq7iTGw2Mg%2fs1600%2fCAPA.png&ehk=n4D%2bK5vC5x%2bZsTm3tTZvEjmZgRWMrdgENmNnDvkEqEA%3d&risl=&pid=ImgRaw&r=0);
+        background-size:100%;
+
+    }
+
+    .titulo {
+        margin-bottom: 400px;
+    }
+    
+
+    .section2 {
+        display: block;
+        align-items: center;
+        flex-wrap: wrap;
+        padding-top: 0px;
+        margin-bottom: 50px;
+        width: 100%;
+        position: initial;
+    }
+
+    .section2 p {
+        margin-top: 100px;
+        width: 100%;
+        padding-left: 20px;
+        border-right: none;
+        padding-right: 20px;
+    }
+    
+    .section2 h2 {
+        padding-left: 0px;
+        font-size: 40px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    }
+
+    .img1 {
+        visibility: hidden;
+    }
+
+    .titulo{
+        margin-top: 200px;
+    }
+
+    .section2 img {
+        display: none;
+    }
+
+    .sobre {
+        position: initial;
+        display: block;
+        flex-wrap: wrap;
+        width: 95%;
+        margin-bottom: 200px;
+        margin-top: 200px;
+        padding-left: 20px;
+        padding: none;
+    
+    }
+
+    .sobre h3 {
+        padding-bottom:80px
+    }
+
+    .sobre img {
+        display:none;
+    }
+
+    .plado {
+        position: initial;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 200px;
+        margin-top: 0px;
+        padding-left: 0px;
+        padding-right: 0%;
+        border-left: none;
+    }
+
+    .section3 {
+        position: initial;
+        width: 100%;
+        padding-left: 20px;
+    
+    }
+
+    .section4 {
+        position: initial;
+        left: auto;
+        width: 100%;
+        border-left: none;
+        padding-right: 20px;
+        padding-left: 10px;
+        padding-top: 200px ;
+
+    }
+
+
+    .carousel {
+        position:absolute;
+        top:6250px;
+        margin-left: 20% ;
+        width: 400px;
+    }
+
+    .lastsec {
+
+        top: 700px;
+    
+    }
+
+    .footer {
+        top: 700px;
+
+    }
+
+    .footer p {
+        justify-content: center;
+        padding-left: 20px;
+    }
+
+    button {
+        margin-left: 38%;
+    }
+    
+}
+
+/*pequenos tablets*/
+@media screen and (min-width:768px) and (max-width:991px) {
+    .mybackground {
+        background-image: url(https://th.bing.com/th/id/R.87d855da98d60076c445ee473796e2d1?rik=e3HRqyWaht3smQ&riu=http%3a%2f%2f2.bp.blogspot.com%2f-KF0NLWuIB9E%2fVovnXJLnmtI%2fAAAAAAAACgI%2fbEq7iTGw2Mg%2fs1600%2fCAPA.png&ehk=n4D%2bK5vC5x%2bZsTm3tTZvEjmZgRWMrdgENmNnDvkEqEA%3d&risl=&pid=ImgRaw&r=0);
+        background-size:100%;
+
+    }
+
+    .titulo {
+        margin-bottom: 400px;
+    }
+    
+
+    .section2 {
+        display: block;
+        align-items: center;
+        flex-wrap: wrap;
+        padding-top: 0px;
+        margin-bottom: 50px;
+        width: 100%;
+        position: initial;
+    }
+
+    .section2 p {
+        margin-top: 100px;
+        width: 100%;
+        padding-left: 20px;
+        border-right: none;
+        padding-right: 20px;
+    }
+    
+    .section2 h2 {
+        padding-left: 0px;
+        font-size: 40px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    }
+
+    .img1 {
+        visibility: hidden;
+    }
+
+    .titulo{
+        margin-top: 200px;
+    }
+
+    .section2 img {
+        display: none;
+    }
+
+    .sobre {
+        position: initial;
+        display: block;
+        flex-wrap: wrap;
+        width: 95%;
+        margin-bottom: 200px;
+        margin-top: 200px;
+        padding-left: 20px;
+        padding: none;
+    
+    }
+
+    .sobre h3 {
+        padding-bottom:80px
+    }
+
+    .sobre img {
+        display:none;
+    }
+
+    .plado {
+        position: initial;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 200px;
+        margin-top: 0px;
+        padding-left: 0px;
+        padding-right: 0%;
+        border-left: none;
+    }
+
+    .section3 {
+        position: initial;
+        width: 100%;
+        padding-left: 20px;
+    
+    }
+
+    .section4 {
+        position: initial;
+        left: auto;
+        width: 100%;
+        border-left: none;
+        padding-right: 20px;
+        padding-left: 10px;
+        padding-top: 200px ;
+
+    }
+
+
+    .carousel {
+        position:absolute;
+        top:6250px;
+        margin-left: 20% ;
+        width: 400px;
+    }
+
+    .lastsec {
+
+        top: 700px;
+    
+    }
+
+    .footer {
+        top: 700px;
+
+    }
+
+    .footer p {
+        justify-content: center;
+        padding-left: 20px;
+    }
+
+    button {
+        margin-left: 38%;
+    }
+    
+}
+
+/*tablets/laptops grandes*/
+@media screen and (min-width:992px) and (max-width:1199px) {
+    .mybackground {
+        background-image: url(https://th.bing.com/th/id/R.87d855da98d60076c445ee473796e2d1?rik=e3HRqyWaht3smQ&riu=http%3a%2f%2f2.bp.blogspot.com%2f-KF0NLWuIB9E%2fVovnXJLnmtI%2fAAAAAAAACgI%2fbEq7iTGw2Mg%2fs1600%2fCAPA.png&ehk=n4D%2bK5vC5x%2bZsTm3tTZvEjmZgRWMrdgENmNnDvkEqEA%3d&risl=&pid=ImgRaw&r=0);
+        background-size:100%;
+
+    }
+
+    .img1 {
+        visibility:initial;
+    }
+
+    .titulo {
+        margin-bottom: 500px;
+    }
+
+    
+
+    .section2 {
+        display: block;
+        align-items: center;
+        flex-wrap: wrap;
+        padding-top: 0px;
+        margin-bottom: 50px;
+        width: 100%;
+        position: initial;
+    }
+
+    .section2 p {
+        margin-top: 100px;
+        width: 100%;
+        padding-left: 20px;
+        border-right: none;
+        padding-right: 20px;
+    }
+    
+    .section2 h2 {
+        padding-left: 0px;
+        font-size: 40px;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+    }
+
+
+    .titulo{
+        margin-top: 500px;
+    }
+
+    .section2 img {
+        display: none;
+    }
+
+    .sobre {
+        position: initial;
+        display: block;
+        flex-wrap: wrap;
+        width: 95%;
+        margin-bottom: 200px;
+        margin-top: 200px;
+        padding-left: 20px;
+        padding: none;
+    
+    }
+
+    .sobre h3 {
+        padding-bottom:80px
+    }
+
+    .sobre img {
+        display:none;
+    }
+
+    .plado {
+        position: initial;
+        flex-wrap: wrap;
+        width: 100%;
+        margin-bottom: 200px;
+        margin-top: 0px;
+        padding-left: 0px;
+        padding-right: 0%;
+        border-left: none;
+    }
+
+    .section3 {
+        position: initial;
+        width: 100%;
+        padding-left: 20px;
+    
+    }
+
+    .section4 {
+        position: initial;
+        left: auto;
+        width: 100%;
+        border-left: none;
+        padding-right: 20px;
+        padding-left: 10px;
+        padding-top: 200px ;
+
+    }
+
+
+    .carousel {
+        position:absolute;
+        top:5600px;
+        margin-left: 33% ;
+        width: 400px;
+    }
+
+    .lastsec {
+        top: 700px;
+    
+    }
+
+    .footer {
+        top: 700px;
+
+    }
+
+    .footer p {
+        justify-content: center;
+        padding-left: 20px;
+    }
+
+    button {
+        margin-left: 43%;
+    }
+    
+}
+
+/*telas extra largas*/
+@media screen and (min-width:992px) and (max-width:1199px) {
+    
+}
